--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<!--  Essential META Tags -->
 
-	<meta property="og:title" content="即刻到账 - 支付宝到账音效生成器">
+	<meta property="og:title" content="装逼神器 - 支付宝到账音效生成器">
 	<meta property="og:description" content="生成任意金额的支付宝到账音效，可以下载用于通知或者闹钟铃声。">
 	<meta property="og:image" content="https://8838.github.io/thumbnail.png">
 	<meta property="og:url" content="https://8838.github.io/">
@@ -17,10 +17,10 @@
 
 	<!--  Non-Essential, But Recommended -->
 
-	<meta property="og:site_name" content="即刻到账 - 支付宝到账音效生成器">
+	<meta property="og:site_name" content="装逼神器 - 支付宝到账音效生成器">
 	<meta name="twitter:image:alt" content="Money cartoon image">
 
-	<title>即刻到账 - 支付宝到账音效生成器</title>
+	<title>装逼神器 - 支付宝到账音效生成器</title>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
